# esp32_s2_wifi

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml
docs/: README.md  debugging.md  roadmap.md
docs/hardware/: s2_mini.md
scripts/: build_web.py  quality.sh
src/: CMakeLists.txt  Kconfig.projbuild  config_access.c  config_access.h  debug_console.c  debug_console.h  diagnostics.c  diagnostics.h  idf_component.yml  manual_config.c  provisioning.h  sta2eth_main.c  status_led.c  status_led.h  usb_ncm_iface.c  wifi_profiles.c  wifi_profiles.h  wired_iface.h
src/diagnostics/: core.c  input.c  input.h  oled.c  oled.h  private.h  ui.c  ui.h
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: check-inline.mjs  check-styles.mjs  inline.mjs
web/src/: api.ts  app.ts  main.ts  styles.css  tokens.css
web/test/: app.test.ts
